k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular
  labels:
    app: mts
spec:
  selector:
    matchLabels:
      app: mts
      tier: angular
  replicas: 1
  template:
    metadata:
      labels:
        app: mts
        tier: angular
    spec:
      containers:
      - name: angular
        image: ghcr.io/devonfw/my-thai-star-angular:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http

---
apiVersion: v1
kind: Service
metadata:
  name: angular
  labels:
    app: mts
    tier: angular
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
    name: http
  selector:
    app: mts
    tier: angular

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java
  labels:
    app: mts
spec:
  selector:
    matchLabels:
      app: mts
      tier: java
  replicas: 1
  template:
    metadata:
      labels:
        app: mts
        tier: java
    spec:
      containers:
      - name: java
        image: ghcr.io/devonfw/my-thai-star-java:latest
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: java
  labels:
    app: mts
    tier: java
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
    name: http
  selector:
    app: mts
    tier: java
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java
  annotations:
    dev.okteto.com/generate-host: mts
    nginx.ingress.kubernetes.io/rewrite-target: /mythaistar/$2
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - mts-devonfw-core.cloud.okteto.net
  rules:
  - host: mts-devonfw-core.cloud.okteto.net
    http:
      paths:
      - path: /api(/)(.*)
        backend:
          service: 
             name: java
             port:
               number: 8081        

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - mts-devonfw-core.cloud.okteto.net
  rules:
  - host: mts-devonfw-core.cloud.okteto.net
    http:
      paths:
      - path: /*
        backend:
          service: 
             name: angular
             port:
               number: 80
---
